--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,6 @@
 }
 
 body {
-  background-color: hsl(280, 0%, 8%);
   color: hsl(280, 0%, 100%);
 }
 
@@ -30,8 +29,9 @@ body {
 
 .sidenav .menu_button {
   padding: 6px 8px 6px 16px;
+  margin-bottom: 8px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 20px;
   color: hsl(0, 0%, 100%);
   display: block;
   transition: all 0.25s;
@@ -41,11 +41,13 @@ body {
 
 .sidenav .menu_button:hover {
   text-shadow: 0px 0px 10px hsla(0, 0%, 100%, 0.5);
+  cursor: pointer;
 }
 
 .main {
   margin-left: 160px;
   padding: 0px 10px;
+  font-size: 16px;
 }
 
 .main h1 {
