--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  background-color: #121212;
+  background-color: #040404;
   color: rgb(255, 255, 255);
 }
 
@@ -25,7 +25,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #0b0b0b;
+  border-right: 2px dashed #00ff66;
   overflow-x: hidden;
   padding-top: 20px;
 }
@@ -44,7 +44,7 @@ body {
 }
 
 .sidenav .menu_button:hover {
-  text-shadow: 0px 0px 10px hsla(0, 0%, 100%, 0.4);
+  text-shadow: 0px 0px 12px hsla(0, 0%, 100%, 0.8);
   cursor: pointer;
 }
 
