--- a/src/styles/NewGame.css
+++ b/src/styles/NewGame.css
@@ -34,6 +34,7 @@
 
 .newgame > input[type="text"] {
     font-size: 15px;
+    margin-bottom: 8px;
 }
 
 .newgame > input[type="text"]::placeholder {
