--- a/src/styles/Browse.css
+++ b/src/styles/Browse.css
@@ -1,3 +1,7 @@
+:root {
+    --accent-color: #00ff00;
+}
+
 .search {
     display: flex;
 }
@@ -6,7 +10,7 @@
     font-size: 1rem;
     color: white;
     background-color: #040404;
-    border-color: #00ff66;
+    border-color: var(--accent-color);
     border-style: dashed;
     border-width: 1px;
     padding: 8px 8px 8px 8px;
@@ -22,7 +26,7 @@
     margin-left: 10px;
     padding: 8px 16px 8px 16px;
     background-color: #040404;
-    border-color: #00ff66;
+    border-color: var(--accent-color);
     border-style: dashed;
     border-width: 1px;
 
@@ -35,7 +39,7 @@
     color: #ffffff;
     border-style: dashed;
     border-width: 1px;
-    border-color: #00ff66;
+    border-color: var(--accent-color);
 }
 
 .search > button > i {
