--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,1 +1,26 @@
 /* Currently empty */
+
+
+
+@keyframes glowing {
+    0% {
+        color: #040404;
+        text-shadow: 0px 0px 12px #000000;
+    }
+    50% {
+        color: #ffffff;
+        text-shadow: 0px 0px 12px #ffffff55;
+    }
+    100% {
+        color: #040404;
+        text-shadow: 0px 0px 12px #000000;
+    }
+}
+
+h1 {
+    text-shadow: 0px 0px 12px #ffffff55;
+}
+
+.underscore {
+    animation: glowing 900ms infinite;
+}
