--- a/src/styles/NewGame.css
+++ b/src/styles/NewGame.css
@@ -1,7 +1,11 @@
+:root {
+    --accent-color: #00ff00;
+}
+
 .ng-button {
     color: white;
     background-color: #040404;
-    border-color: #00ff66;
+    border-color: var(--accent-color);
     border-style: dashed;
     border-width: 1px;
     margin-left: 2px;
@@ -14,6 +18,14 @@
     margin-top: 15px;
 }
 
+button {
+    transition: all 0.25s;
+}
+
+button:hover {
+    text-shadow: 0px 0px 12px #ffffff;
+}
+
 .newgame {
     display: flex;
     flex-grow: 1;
@@ -23,7 +35,7 @@
 .newgame > input {
     color: white;
     background-color: #040404;
-    border-color: #00ff66;
+    border-color: var(--accent-color);
     border-style: dashed;
     border-width: 1px;
     padding: 8px 8px 8px 8px;
