formatted code using prettier

--- a/src/styles/Browse.css
+++ b/src/styles/Browse.css
@@ -1,84 +1,84 @@
 :root {
-    --accent-color: #00ff00;
+	--accent-color: #00ff00;
 }
 
 .search {
-    display: flex;
+	display: flex;
 }
 
-.search>input {
-    font-size: 1rem;
-    color: white;
-    background-color: #040404;
-    border-color: var(--accent-color);
-    border-style: dashed;
-    border-width: 1px;
-    padding: 8px 8px 8px 8px;
+.search > input {
+	font-size: 1rem;
+	color: white;
+	background-color: #040404;
+	border-color: var(--accent-color);
+	border-style: dashed;
+	border-width: 1px;
+	padding: 8px 8px 8px 8px;
 
-    flex-grow: 1;
+	flex-grow: 1;
 }
 
-.search>input[type=text]:focus {
-    outline-style: none;
+.search > input[type='text']:focus {
+	outline-style: none;
 }
 
-.search>button {
-    margin-left: 10px;
-    padding: 8px 16px 8px 16px;
-    background-color: #040404;
-    border-color: var(--accent-color);
-    border-style: dashed;
-    border-width: 1px;
+.search > button {
+	margin-left: 10px;
+	padding: 8px 16px 8px 16px;
+	background-color: #040404;
+	border-color: var(--accent-color);
+	border-style: dashed;
+	border-width: 1px;
 
-    cursor: pointer;
+	cursor: pointer;
 }
 
-.search>select {
-    margin-left: 8px;
-    background-color: #040404;
-    color: #ffffff;
-    border-style: dashed;
-    border-width: 1px;
-    border-color: var(--accent-color);
+.search > select {
+	margin-left: 8px;
+	background-color: #040404;
+	color: #ffffff;
+	border-style: dashed;
+	border-width: 1px;
+	border-color: var(--accent-color);
 }
 
-.search>button>i {
-    color: white;
-    font-size: 16px;
+.search > button > i {
+	color: white;
+	font-size: 16px;
 }
 
 .game {
-    display: block;
+	display: block;
 
-    border-style: solid;
-    border-color: #555555;
-    background-color: #555555;
-    border-radius: 5px;
+	border-style: solid;
+	border-color: #555555;
+	background-color: #555555;
+	border-radius: 5px;
 
-    margin: 10px 0 10px 0;
-    padding: 0px 6px 18px 6px;
+	margin: 10px 0 10px 0;
+	padding: 0px 6px 18px 6px;
 
-    line-height: 10px;
+	line-height: 10px;
 }
 
 .game p {
-    padding-bottom: 5px;
-    font-size: 18px;
+	padding-bottom: 5px;
+	font-size: 18px;
 
-    font-weight: 700;
+	font-weight: 700;
 }
 
 .game a {
-    text-decoration: none;
+	text-decoration: none;
 
-    border-style: solid;
-    border-color: #3a3a3a;
-    background-color: #3a3a3a;
+	border-style: solid;
+	border-color: #3a3a3a;
+	background-color: #3a3a3a;
 
-    color: white;
-    margin-bottom: 100px;
-    border-width: 0px;
-    border-radius: 5px;
+	color: white;
+	margin-bottom: 100px;
+	border-width: 0px;
+	border-radius: 5px;
 
-    padding: 4px 10px 4px 10px;
+	padding: 4px 10px 4px 10px;
 }
