--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -8,7 +8,7 @@
 	border-color: var(--accent-color);
 	border-style: dashed;
 	border-width: 1px;
-	margin-left: 2px;
+	margin-bottom: 8px;
 	padding: 8px 8px 8px 8px;
 
 	font-size: 15px;
