--- a/src/styles/Browse.css
+++ b/src/styles/Browse.css
@@ -11,7 +11,7 @@
 	color: white;
 	background-color: #040404;
 	border-color: var(--accent-color);
-	border-style: dashed;
+	border-style: solid;
 	border-width: 1px;
 	padding: 8px 8px 8px 8px;
 
@@ -27,7 +27,7 @@
 	padding: 8px 16px 8px 16px;
 	background-color: #040404;
 	border-color: var(--accent-color);
-	border-style: dashed;
+	border-style: solid;
 	border-width: 1px;
 
 	cursor: pointer;
@@ -37,7 +37,7 @@
 	margin-left: 8px;
 	background-color: #040404;
 	color: #ffffff;
-	border-style: dashed;
+	border-style: solid;
 	border-width: 1px;
 	border-color: var(--accent-color);
 }
@@ -51,19 +51,19 @@
 	display: block;
 
 	border-style: solid;
-	border-color: #555555;
-	background-color: #555555;
-	border-radius: 5px;
-
-	margin: 10px 0 10px 0;
-	padding: 0px 6px 18px 6px;
+	border-color: #00ff00;
+	border-width: 1px;
+	background-color: #040404;
+	margin: 10px 1px 0px 2px;
+	padding: 5px 5px 20px 5px;
 
 	line-height: 10px;
 }
 
 .game p {
 	padding-bottom: 5px;
-	font-size: 18px;
+	margin-left: 6px;
+	font-size: 19px;
 
 	font-weight: 700;
 }
@@ -72,13 +72,16 @@
 	text-decoration: none;
 
 	border-style: solid;
-	border-color: #3a3a3a;
-	background-color: #3a3a3a;
+	border-color: rgb(0, 174, 255);
+	background-color: #040404;
 
 	color: white;
 	margin-bottom: 100px;
-	border-width: 0px;
-	border-radius: 5px;
-
+	border-width: 1.5px;
+	margin-left: 5px;
 	padding: 4px 10px 4px 10px;
+}
+
+.main {
+	padding-left: 5px;
 }
