--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -24,3 +24,27 @@ h1 {
 .underscore {
 	animation: glowing 900ms infinite;
 }
+
+.title {
+	font-size: 24px;
+	padding-left: 15px;
+	padding-top: 20px;
+	border-style: solid;
+	border-bottom: 0;
+	border-left: 0;
+	border-right: 0;
+	border-width: 1px;
+	border-color: #00ff00;
+}
+
+#title {
+	font-size: 24px;
+}
+
+.body {
+	text-align: justify;
+	padding-left: 15px;
+	padding-top: 13px;
+	padding-right: 2rem;
+	font-size: 17px;
+}
