--- a/src/styles/Preferences.css
+++ b/src/styles/Preferences.css
@@ -1,30 +1,34 @@
 :root {
-    --accent-color: #00ff00;
+	--accent-color: #00ff00;
 }
 
 .section {
-    border-style: dashed;
-    border-width: 1px;
-    border-color: var(--accent-color);
-    margin-top: 8px;
-    text-align: center;
+	border-style: dashed;
+	border-width: 1px;
+	border-color: var(--accent-color);
+	margin-top: 8px;
+	text-align: center;
 }
 
 .section > button {
-    margin-top: 8px;
-    margin-bottom: 8px;
-    margin-right: 8px;
-    padding: 8px;
-    background-color: transparent;
-    color: white;
-    border-style: dashed;
-    border-width: 1px;
+	margin-top: 8px;
+	margin-bottom: 8px;
+	margin-right: 8px;
+	padding: 8px;
+	background-color: transparent;
+	color: white;
+	border-style: dashed;
+	border-width: 1px;
 }
 
 .section #wipe {
-    border-color: #ff0000;
+	border-color: #ff0000;
 }
 
 .section #install {
-    border-color: var(--accent-color)
+	border-color: var(--accent-color);
+}
+
+.main {
+	padding-left: 5px;
 }
