--- a/src/styles/Preferences.scss
+++ b/src/styles/Preferences.scss
@@ -37,7 +37,7 @@
 }
 
 .locale-settings > select {
-	background-color: black;
+	background-color: #040404;
 	color: white;
 	padding: 6px;
 	border-color: #00ff00;
