Starts redesign for the Library page
Still missing
- Styled add btn
- Game info

Also this fixes prettier not working

--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -27,6 +27,8 @@ body {
 	background-color: #121719;
 	background-repeat: repeat;
 	color: rgb(255, 255, 255);
+	overflow-x: hidden;
+	width: 100%;
 }
 
 .sidenav {
