--- a/src/styles/Library.scss
+++ b/src/styles/Library.scss
@@ -2,6 +2,10 @@
 	--accent-color: #00ff00;
 }
 
+* {
+	transition: all 0.25s;
+}
+
 .top {
 	display: flex;
 	justify-content: space-between;
@@ -61,18 +65,32 @@
 		padding-left: 10px;
 		width: 250px;
 
-		img {
-			align-self: center;
-			margin-bottom: 1rem;
-			box-shadow: 0px 10px 24px 7px rgba(0, 0, 0, 0.393);
-		}
-
-		p {
+		button {
+			padding: 0;
 			margin: 0;
-			font-weight: 550;
-			font-size: 1.24rem;
-			word-wrap: break-word;
-			text-align: center;
+			background-color: inherit;
+			border: none;
+
+			&:hover {
+				text-shadow: none;
+			}
+
+			img {
+				transition: all 0.25s;
+				align-self: center;
+				margin-bottom: 1rem;
+				padding-top: 1rem;
+				box-shadow: 0px 10px 24px 7px rgba(0, 0, 0, 0.393);
+			}
+
+			p {
+				color: var(--text-color);
+				margin: 0;
+				font-weight: 550;
+				font-size: 1.24rem;
+				word-wrap: break-word;
+				text-align: center;
+			}
 		}
 
 		.game-info {
