--- a/src/styles/Library.scss
+++ b/src/styles/Library.scss
@@ -34,13 +34,18 @@
 	}
 
 	button {
-		background-color: #040404;
+		background-color: var(--item-bg-color);
 		border-color: var(--accent-color);
 		border-style: solid;
+		backdrop-filter: blur(2px);
+		-webkit-backdrop-filter: blur(2px);
 		border-width: 1px;
-		padding: 4px 16px 4px 16px;
-		margin-bottom: 1.2rem;
-		margin-top: 1.2rem;
+		border-radius: 10px;
+		border-color: #ffffff68;
+
+		padding: 0 15px 0 15px;
+		margin-bottom: 1rem;
+		margin-top: 1rem;
 		color: #fff;
 		font-size: 16px;
 		cursor: pointer;
@@ -109,29 +114,77 @@
 		}
 	}
 
-	.buttons {
-		padding: 15px 0px 8px 8px;
+	.gm-flex {
+		display: flex;
 
-		.game-button-run {
-			background-color: #040404;
-			border-style: solid;
-			border-width: 1px;
-			border-color: var(--accent-color);
-			color: var(--accent-color);
-			padding: 4px 16px 4px 16px;
-			margin-right: 8px;
-			cursor: pointer;
-		}
+		.game-modal {
+			background-color: var(--game-modal-bg);
+			backdrop-filter: blur(2px);
+			-webkit-backdrop-filter: blur(2px);
+			margin: 0;
+			margin-left: auto;
+			height: 100%;
+			border-color: var(--game-modal-border-color);
 
-		.game-button-delete {
-			background-color: #040404;
-			border-style: solid;
-			border-width: 1px;
-			border-color: #ff0000;
-			color: #ff0000;
-			padding: 4px 16px 4px 16px;
-			margin-right: 8px;
-			cursor: pointer;
+			&::backdrop {
+				background-color: inherit;
+			}
+
+			&[open] {
+				color: var(--text-color);
+				display: flex;
+				flex-direction: column;
+				width: 350px;
+			}
+
+			#game-name {
+				font-size: 1.5rem;
+				font-weight: 800;
+				text-align: center;
+			}
+
+			#game-desc {
+				flex-grow: 2;
+				margin-left: 0.5rem;
+				margin-right: 0.5rem;
+				font-size: 0.9rem;
+				line-height: 17px;
+			}
+
+			#execute {
+				margin-left: 3rem;
+				margin-right: 3rem;
+				margin-top: 1.5rem;
+				font-size: 1.3rem;
+				font-family: 'JetBrains Mono', monospace;
+				font-weight: 900;
+				border-style: solid;
+				border-color: var(--game-modal-run);
+				border-radius: 10px;
+				background-color: var(--game-modal-run);
+				color: var(--black-text);
+			}
+
+			.buttons {
+				flex-direction: row;
+
+				.game-button-delete,
+				.game-button-run {
+					border: none;
+					background-color: inherit;
+					font-size: 2rem;
+					cursor: pointer;
+				}
+
+				.game-button-delete {
+					float: right;
+					color: var(--delete-game-color);
+				}
+
+				.game-button-run {
+					color: var(--edit-game-color);
+				}
+			}
 		}
 	}
 }
