--- a/src/styles/Library.scss
+++ b/src/styles/Library.scss
@@ -15,14 +15,14 @@
 		color: #fff;
 		font-size: 1rem;
 		margin: 16px 16px 16px 0;
-		padding: 8px 8px 8px 8px;
+		padding: 8px;
 		background-color: var(--item-bg-color);
 		border-style: solid;
 		backdrop-filter: blur(2px);
 		-webkit-backdrop-filter: blur(2px);
 		border-width: 1px;
-		border-radius: var(--border-radius);
-		border-color: #ffffff68;
+		border-radius: 15px;
+		border-color: #fff;
 
 		&[type='text']:focus {
 			outline-style: none;
@@ -40,10 +40,10 @@
 		backdrop-filter: blur(2px);
 		-webkit-backdrop-filter: blur(2px);
 		border-width: 1px;
-		border-radius: var(--border-radius);
-		border-color: #ffffff68;
+		border-radius: 100px;
+		border-color: #fff;
 
-		padding: 0 15px 0 15px;
+		padding: 0 12px;
 		margin-bottom: 1rem;
 		margin-top: 1rem;
 		color: #fff;
@@ -64,7 +64,7 @@
 		flex-direction: column;
 		padding-top: 8px;
 		padding-left: 10px;
-		width: 250px;
+		width: 203px;
 
 		button {
 			padding: 0;
@@ -80,15 +80,15 @@
 				transition: all 0.25s;
 				align-self: center;
 				margin-bottom: 1rem;
-				padding-top: 1rem;
 				box-shadow: 0px 10px 24px 7px rgba(0, 0, 0, 0.393);
 			}
 
 			p {
 				color: var(--text-color);
 				margin: 0;
-				font-weight: 550;
-				font-size: 1.24rem;
+				font-weight: 400;
+				font-size: 20px;
+				font-family: 'Montserrat';
 				word-wrap: break-word;
 				text-align: center;
 			}
